--- a/src/Mocument/Mocument.Web/Web.config
+++ b/src/Mocument/Mocument.Web/Web.config
@@ -1,48 +1,53 @@
 ﻿<?xml version="1.0"?>
 
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
+ 
 
 <configuration>
-  <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  
 
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <customErrors mode="Off"/>
 
+    <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
     </authentication>
-
-    <membership>
+    <anonymousIdentification enabled="true" />
+    <roleManager enabled="true" cacheRolesInCookie="false" defaultProvider="XmlRoleProvider">
       <providers>
         <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices"
-             enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
-             maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-             applicationName="/" />
-      </providers>
-    </membership>
-
-    <profile>
-      <providers>
-        <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-      </providers>
-    </profile>
-
-    <roleManager enabled="false">
-      <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
+        <add name="XmlRoleProvider"
+             applicationName="SampleWebsite"
+             type="Artem.Web.Security.XmlRoleProvider"/>
       </providers>
     </roleManager>
+    <membership defaultProvider="XmlMembershipProvider">
+      <providers>
+        <clear/>
+        <add name="XmlMembershipProvider"
+             applicationName="SampleWebsite"
+             type="Artem.Web.Security.XmlMembershipProvider"
+             minRequiredPasswordLength="1"
+             minRequiredNonAlphanumericCharacters="0"
+             requiresQuestionAndAnswer="false"
+             requiresUniqueEmail="false"
+             passwordFormat="Clear"/>
+      </providers>
+    </membership>
+    <profile enabled="true" defaultProvider="XmlProfileProvider">
+      <providers>
+        <clear/>
+        <add name="XmlProfileProvider"
+             applicationName="SampleWebsite"
+             type="Artem.Web.Security.XmlProfileProvider"/>
+      </providers>
+      <properties>
+        <group name="Person">
+          <add name="FirstName" type="string"/>
+          <add name="LastName" type="string"/>
+        </group>
+      </properties>
+    </profile>
 
   </system.web>
 
