--- a/src/Mocument/Mocument.Web/Web.config
+++ b/src/Mocument/Mocument.Web/Web.config
@@ -1,57 +1,57 @@
 ﻿<?xml version="1.0"?>
 
- 
+
 
 <configuration>
-  
+
+  <connectionStrings>
+    <add name="TapesEntities" connectionString="metadata=res://*/;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;Data Source=|DataDirectory|\Tapes.sdf&quot;" providerName="System.Data.EntityClient" />
+
+    <add name="ApplicationServices" connectionString="data source=|DataDirectory|\SqlCeAspnetdb.sdf" />
+  </connectionStrings>
 
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
 
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
+
+
+    <anonymousIdentification enabled="true" />
+
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
     </authentication>
-    <anonymousIdentification enabled="true" />
-    <roleManager enabled="true" cacheRolesInCookie="false" defaultProvider="XmlRoleProvider">
+
+    <membership defaultProvider="SqlCeMembershipProvider">
       <providers>
-        <clear/>
-        <add name="XmlRoleProvider"
-             applicationName="SampleWebsite"
-             type="Artem.Web.Security.XmlRoleProvider"/>
-      </providers>
-    </roleManager>
-    <membership defaultProvider="XmlMembershipProvider">
-      <providers>
-        <clear/>
-        <add name="XmlMembershipProvider"
-             applicationName="SampleWebsite"
-             type="Artem.Web.Security.XmlMembershipProvider"
-             minRequiredPasswordLength="1"
-             minRequiredNonAlphanumericCharacters="0"
-             requiresQuestionAndAnswer="false"
-             requiresUniqueEmail="false"
-             passwordFormat="Clear"/>
+        <clear />
+        <add name="SqlCeMembershipProvider" type="ErikEJ.SqlCeMembershipProvider" connectionStringName="ApplicationServices" applicationName="/" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" passwordFormat="Hashed" writeExceptionsToEventLog="false" />
       </providers>
     </membership>
-    <profile enabled="true" defaultProvider="XmlProfileProvider">
+
+    <profile enabled="false">
       <providers>
-        <clear/>
-        <add name="XmlProfileProvider"
-             applicationName="SampleWebsite"
-             type="Artem.Web.Security.XmlProfileProvider"/>
+        <clear />
+        <add name="SqlCeProfileProvider" type="ErikEJ.SqlCeProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
-      <properties>
-        <group name="Person">
-          <add name="FirstName" type="string"/>
-          <add name="LastName" type="string"/>
-        </group>
-      </properties>
     </profile>
+
+    <roleManager defaultProvider="SqlCeRoleProvider" enabled="true" cacheRolesInCookie="true" cookieName=".ASPROLES" cookieTimeout="30" cookiePath="/" cookieRequireSSL="false" cookieSlidingExpiration="true" cookieProtection="All">
+      <providers>
+        <clear />
+        <add name="SqlCeRoleProvider" type="ErikEJ.SqlCeRoleProvider" connectionStringName="ApplicationServices" applicationName="/" writeExceptionsToEventLog="true" />
+        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
+      </providers>
+    </roleManager>
 
   </system.web>
 
   <system.webServer>
-     <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
 </configuration>
