--- a/src/Mocument/Mocument.Console/app.config
+++ b/src/Mocument/Mocument.Console/app.config
@@ -1,3 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <connectionStrings>
+    <add name="TapesEntities" connectionString="metadata=res://*/;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;Data Source=..\..\..\Mocument.Web\App_Data\Tapes.sdf&quot;" providerName="System.Data.EntityClient" />
+
+  </connectionStrings>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
