finally gave up on IPC/JSON and went to sqlite.  repo is full of aborted projects. need to archive them here and will clean up next commit

--- a/src/Mocument/Mocument.ConsoleProxy/app.config
+++ b/src/Mocument/Mocument.ConsoleProxy/app.config
@@ -2,13 +2,22 @@
 
 <configuration>
 
-  <appSettings>
-    <add key="ipcPath" value="Mocument_IPC" />
-    <add key="ipcChannel" value="low" />
+  <connectionStrings>
 
-    <add key="contextPath" value="Mocument_DB" />
+    <add name="mocument" connectionString="Data Source=c:\temp\mocument.db;Version=3;" providerName="System.Data.SQLite" />
+  </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <add name="SQLite Data Provider"
+              invariant="System.Data.SQLite"
+              description=".Net Framework Data Provider for SQLite"
+              type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data>
+
+  <appSettings>
     <add key="proxyPort" value="81" />
-    <add key="proxyLockDown" value="true" />
+    <add key="proxySecured" value="true" />
   </appSettings>
 
   <startup>
