--- a/src/Mocument/Mocument.Model/Mocument.Model.csproj
+++ b/src/Mocument/Mocument.Model/Mocument.Model.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Catalog.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tape.cs" />
