--- a/src/Mocument/Mocument.ReverseProxyServer/Mocument.ReverseProxyServer.csproj
+++ b/src/Mocument/Mocument.ReverseProxyServer/Mocument.ReverseProxyServer.csproj
@@ -60,13 +60,9 @@
       <Project>{C4E3839D-7607-4B2D-B261-69170E3B66D8}</Project>
       <Name>Salient.HTTPArchiveModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mocument.DataAccess\Mocument.DataAccess.csproj">
-      <Project>{C99297F5-2298-42BA-861D-B59FFFA82639}</Project>
-      <Name>Mocument.DataAccess</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mocument.IPC\Mocument.IPC.csproj">
-      <Project>{2768904D-0050-4B6C-ACE8-6BE6FF035658}</Project>
-      <Name>Mocument.IPC</Name>
+    <ProjectReference Include="..\Mocument.DataAccess.SQLite\Mocument.DataAccess.SQLite.csproj">
+      <Project>{12616535-B6E2-4C8D-B5E6-EF3945E5FD8F}</Project>
+      <Name>Mocument.DataAccess.SQLite</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mocument.Model\Mocument.Model.csproj">
       <Project>{061D1E96-587D-4E2F-9F26-756755FA5135}</Project>
@@ -78,7 +74,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="dev.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
