--- a/src/Mocument/Mocument.WebUI/Mocument.WebUI.csproj
+++ b/src/Mocument/Mocument.WebUI/Mocument.WebUI.csproj
@@ -41,6 +41,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\packages\System.Data.SQLite.1.0.83.0\lib\net40\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite.Linq">
+      <HintPath>..\packages\System.Data.SQLite.1.0.83.0\lib\net40\System.Data.SQLite.Linq.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -65,12 +71,20 @@
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
+    <Content Include="Tapes\AddTape.aspx" />
+    <Content Include="Tapes\MyTapes.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+    </Content>
+    <Content Include="x64\SQLite.Interop.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="x86\SQLite.Interop.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -110,6 +124,7 @@
       <DependentUpon>Register.aspx</DependentUpon>
     </Compile>
     <Compile Include="Code\ContextDataSource.cs" />
+    <Compile Include="Code\EntryRenderer.cs" />
     <Compile Include="Code\ProxySettings.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -129,10 +144,23 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
+    <Compile Include="Tapes\AddTape.aspx.cs">
+      <DependentUpon>AddTape.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tapes\AddTape.aspx.designer.cs">
+      <DependentUpon>AddTape.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Tapes\MyTapes.aspx.cs">
+      <DependentUpon>MyTapes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tapes\MyTapes.aspx.designer.cs">
+      <DependentUpon>MyTapes.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Tapes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Account\Web.config" />
@@ -143,18 +171,17 @@
       <Project>{C4E3839D-7607-4B2D-B261-69170E3B66D8}</Project>
       <Name>Salient.HTTPArchiveModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mocument.DataAccess\Mocument.DataAccess.csproj">
-      <Project>{C99297F5-2298-42BA-861D-B59FFFA82639}</Project>
-      <Name>Mocument.DataAccess</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mocument.IPC\Mocument.IPC.csproj">
-      <Project>{2768904D-0050-4B6C-ACE8-6BE6FF035658}</Project>
-      <Name>Mocument.IPC</Name>
+    <ProjectReference Include="..\Mocument.DataAccess.SQLite\Mocument.DataAccess.SQLite.csproj">
+      <Project>{12616535-B6E2-4C8D-B5E6-EF3945E5FD8F}</Project>
+      <Name>Mocument.DataAccess.SQLite</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mocument.Model\Mocument.Model.csproj">
       <Project>{061D1E96-587D-4E2F-9F26-756755FA5135}</Project>
       <Name>Mocument.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -177,6 +204,10 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
