--- a/src/Mocument/Mocument.WebUI/Web.config
+++ b/src/Mocument/Mocument.WebUI/Web.config
@@ -3,15 +3,23 @@
 
 
 <configuration>
-
+  <connectionStrings>
+    <add name="mocument" connectionString="Data Source=c:\temp\mocument.db;Version=3;" providerName="System.Data.SQLite" />
+  </connectionStrings>
+  
   <appSettings>
-    <add key="ipcPath" value="Mocument_IPC" />
-    <add key="ipcChannel" value="high" />
-
-    <add key="contextPath" value="Mocument_DB" />
     <add key="proxyPort" value="81" />
-    <add key="proxyLockDown" value="true" />
+    <add key="proxySecured" value="true" />
   </appSettings>
+
+  <system.data>
+    <DbProviderFactories>
+      <add name="SQLite Data Provider"
+              invariant="System.Data.SQLite"
+              description=".Net Framework Data Provider for SQLite"
+              type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data>
   <system.web>
     <securityPolicy>
       <trustLevel name="Full" policyFile="internal"/>
