--- a/src/Mocument/Mocument.ConsoleProxy/Mocument.ConsoleProxy.csproj
+++ b/src/Mocument/Mocument.ConsoleProxy/Mocument.ConsoleProxy.csproj
@@ -55,6 +55,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Mocument.DataAccess.SQLite\Mocument.DataAccess.SQLite.csproj">
+      <Project>{12616535-B6E2-4C8D-B5E6-EF3945E5FD8F}</Project>
+      <Name>Mocument.DataAccess.SQLite</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mocument.DataAccess\Mocument.DataAccess.csproj">
+      <Project>{8E4A6BEE-AF75-48E4-AB16-B4CC16E53A2E}</Project>
+      <Name>Mocument.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mocument.ReverseProxyServer\Mocument.ReverseProxyServer.csproj">
       <Project>{DA1A8878-BDA3-4F4E-B32B-62785C9ADC1C}</Project>
       <Name>Mocument.ReverseProxyServer</Name>
