--- a/src/Mocument/Mocument.DataAccess/Mocument.DataAccess.csproj
+++ b/src/Mocument/Mocument.DataAccess/Mocument.DataAccess.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{12616535-B6E2-4C8D-B5E6-EF3945E5FD8F}</ProjectGuid>
+    <ProjectGuid>{8E4A6BEE-AF75-48E4-AB16-B4CC16E53A2E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mocument.DataAccess.SQLite</RootNamespace>
-    <AssemblyName>Mocument.DataAccess.SQLite</AssemblyName>
+    <RootNamespace>Mocument.DataAccess</RootNamespace>
+    <AssemblyName>Mocument.DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,14 +41,7 @@
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.SQLite">
-      <HintPath>..\packages\System.Data.SQLite.1.0.83.0\lib\net40\System.Data.SQLite.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Data.SQLite.Linq">
-      <HintPath>..\packages\System.Data.SQLite.1.0.83.0\lib\net40\System.Data.SQLite.Linq.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,16 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SQLiteStore.cs" />
+    <Compile Include="DefaultEntryComparer.cs" />
+    <Compile Include="EntryCompareResult.cs" />
+    <Compile Include="IEntryComparer.cs" />
+    <Compile Include="IStore.cs" />
+    <Compile Include="JsonStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="x64\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="x86\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="dev.snk" />
@@ -75,10 +64,6 @@
     <ProjectReference Include="..\Lib\Salient.HTTPArchiveModel\Salient.HTTPArchiveModel.csproj">
       <Project>{C4E3839D-7607-4B2D-B261-69170E3B66D8}</Project>
       <Name>Salient.HTTPArchiveModel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mocument.DataAccess\Mocument.DataAccess.csproj">
-      <Project>{8E4A6BEE-AF75-48E4-AB16-B4CC16E53A2E}</Project>
-      <Name>Mocument.DataAccess</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mocument.Model\Mocument.Model.csproj">
       <Project>{061D1E96-587D-4E2F-9F26-756755FA5135}</Project>
