--- a/src/Mocument/Mocument.ReverseProxyServer/Mocument.ReverseProxyServer.csproj
+++ b/src/Mocument/Mocument.ReverseProxyServer/Mocument.ReverseProxyServer.csproj
@@ -40,6 +40,9 @@
     <Reference Include="FiddlerCore4">
       <HintPath>..\packages\FiddlerCore4\FiddlerCore4.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Messaging" />
@@ -64,6 +67,10 @@
       <Project>{12616535-B6E2-4C8D-B5E6-EF3945E5FD8F}</Project>
       <Name>Mocument.DataAccess.SQLite</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mocument.DataAccess\Mocument.DataAccess.csproj">
+      <Project>{8E4A6BEE-AF75-48E4-AB16-B4CC16E53A2E}</Project>
+      <Name>Mocument.DataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mocument.Model\Mocument.Model.csproj">
       <Project>{061D1E96-587D-4E2F-9F26-756755FA5135}</Project>
       <Name>Mocument.Model</Name>
@@ -75,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="dev.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
