--- a/src/Mocument/Mocument.ReverseProxyServer.Tests/Mocument.ReverseProxyServer.Tests.csproj
+++ b/src/Mocument/Mocument.ReverseProxyServer.Tests/Mocument.ReverseProxyServer.Tests.csproj
@@ -65,9 +65,9 @@
       <Project>{C4E3839D-7607-4B2D-B261-69170E3B66D8}</Project>
       <Name>Salient.HTTPArchiveModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mocument.IPC\Mocument.IPC.csproj">
-      <Project>{2768904D-0050-4B6C-ACE8-6BE6FF035658}</Project>
-      <Name>Mocument.IPC</Name>
+    <ProjectReference Include="..\Mocument.DataAccess\Mocument.DataAccess.csproj">
+      <Project>{8E4A6BEE-AF75-48E4-AB16-B4CC16E53A2E}</Project>
+      <Name>Mocument.DataAccess</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mocument.Model\Mocument.Model.csproj">
       <Project>{061D1E96-587D-4E2F-9F26-756755FA5135}</Project>
