added transient memory store for test scenarios

--- a/src/Mocument/Mocument.DataAccess.Tests/Mocument.DataAccess.Tests.csproj
+++ b/src/Mocument/Mocument.DataAccess.Tests/Mocument.DataAccess.Tests.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonStoreFixture.cs" />
+    <Compile Include="MemoryStoreFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
