--- a/src/Mocument/Mocument.ReverseProxyServer.Tests/Mocument.ReverseProxyServer.Tests.csproj
+++ b/src/Mocument/Mocument.ReverseProxyServer.Tests/Mocument.ReverseProxyServer.Tests.csproj
@@ -40,6 +40,9 @@
     <Reference Include="FiddlerCore4">
       <HintPath>..\packages\FiddlerCore4\FiddlerCore4.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
@@ -81,6 +84,11 @@
       <Project>{343CFACC-2A91-4AD2-B372-697D93467C55}</Project>
       <Name>Mocument.Transcoders</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="CIAPISESSION.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
