added windows service wrapper. removed proxy management from admin ui.

--- a/src/Mocument/Mocument.ConsoleProxy/Mocument.ConsoleProxy.csproj
+++ b/src/Mocument/Mocument.ConsoleProxy/Mocument.ConsoleProxy.csproj
@@ -88,6 +88,13 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="bin\Debug\Web.config" />
+    <Content Include="bin\Debug\Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
+    <Content Include="bin\Debug\Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
