--- a/src/Mocument/Mocument.WebUI/Web.config
+++ b/src/Mocument/Mocument.WebUI/Web.config
@@ -10,6 +10,7 @@
   <appSettings>
     <add key="proxyPort" value="81" />
     <add key="proxySecured" value="true" />
+    <add key="manageProxy" value="true" />
   </appSettings>
 
   <system.data>
