--- a/src/Mocument/Mocument.WebUI/Mocument.WebUI.csproj
+++ b/src/Mocument/Mocument.WebUI/Mocument.WebUI.csproj
@@ -36,8 +36,12 @@
     <Reference Include="Artem.Web.Security">
       <HintPath>..\packages\Artem.Web.Security.dll</HintPath>
     </Reference>
+    <Reference Include="FiddlerCore4">
+      <HintPath>..\packages\FiddlerCore4\FiddlerCore4.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,6 +51,7 @@
     <Reference Include="System.Data.SQLite.Linq">
       <HintPath>..\packages\System.Data.SQLite.1.0.83.0\lib\net40\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -125,6 +130,7 @@
     </Compile>
     <Compile Include="Code\ContextDataSource.cs" />
     <Compile Include="Code\EntryRenderer.cs" />
+    <Compile Include="Code\ProxyManager.cs" />
     <Compile Include="Code\ProxySettings.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
