First glimpses of the mocument in automated testing scenarios

--- a/src/Mocument/ClientLibraryDemo/app.config
+++ b/src/Mocument/ClientLibraryDemo/app.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Salient.ReliableHttpClient" publicKeyToken="de2ccdae144c2020" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.6.17" newVersion="1.0.6.17" />
+        <assemblyIdentity name="Salient.ReliableHttpClient" publicKeyToken="de2ccdae144c2020" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.6.17" newVersion="1.0.6.17"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Salient.ReliableHttpClient.Serializer.Newtonsoft" publicKeyToken="af1483d0b03a76fa" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.4.10" newVersion="1.0.4.10" />
+        <assemblyIdentity name="Salient.ReliableHttpClient.Serializer.Newtonsoft" publicKeyToken="af1483d0b03a76fa" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.6.17" newVersion="1.0.6.17"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
